src/task/tools/git/snapshots/mob_rs__task__tools__git__tests__git_tool_all_operations.snap
---
source: src/task/tools/git/tests.rs
expression: operations
---
[
    (
        "clone_op",
        Clone,
    ),
    (
        "pull_op",
        Pull,
    ),
    (
        "fetch_op",
        Fetch,
    ),
    (
        "checkout_op",
        Checkout,
    ),
    (
        "submodule_update_op",
        SubmoduleUpdate,
    ),
    (
        "reset_op",
        Reset,
    ),
]
