src/task/tools/git/snapshots/mob_rs__task__tools__git__tests__git_tool_builder.snap
---
source: src/task/tools/git/tests.rs
expression: tool
---
GitTool {
    url: Some(
        "https://github.com/example/repo.git",
    ),
    path: Some(
        "/tmp/repo",
    ),
    branch: Some(
        "main",
    ),
    remote: None,
    target: None,
    shallow: true,
    force: false,
    recursive: true,
    operation: Clone,
}
