src/task/tools/git/snapshots/mob_rs__task__tools__git__tests__git_tool_get_remote.snap
---
source: src/task/tools/git/tests.rs
expression: remotes
---
[
    (
        "default",
        "origin",
    ),
    (
        "custom upstream",
        "upstream",
    ),
]
