src/task/tools/git/snapshots/mob_rs__task__tools__git__tests__git_tool_new_fields.snap
---
source: src/task/tools/git/tests.rs
expression: tool
---
GitTool {
    url: None,
    path: Some(
        "/tmp/repo",
    ),
    branch: None,
    remote: Some(
        "upstream",
    ),
    target: Some(
        "v1.0.0",
    ),
    shallow: false,
    force: true,
    recursive: false,
    operation: Clone,
}
