src/task/tools/git/snapshots/mob_rs__task__tools__git__tests__git_tool_reset_builder.snap
---
source: src/task/tools/git/tests.rs
expression: tool
---
GitTool {
    url: None,
    path: Some(
        "/tmp/repo",
    ),
    branch: None,
    remote: None,
    target: Some(
        "HEAD~1",
    ),
    shallow: false,
    force: true,
    recursive: true,
    operation: Reset,
}
