src/task/tools/git/snapshots/mob_rs__task__tools__git__tests__git_tool_submodule_update_builder.snap
---
source: src/task/tools/git/tests.rs
expression: tool
---
GitTool {
    url: None,
    path: Some(
        "/tmp/repo",
    ),
    branch: None,
    remote: None,
    target: None,
    shallow: false,
    force: false,
    recursive: true,
    operation: SubmoduleUpdate,
}
